# fastapi-deployment

./: pyproject.toml  render.yaml
fastapi-backend/: main.py  pyproject.toml
