[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = ""
authors = ["Mian Maaz Ullah Khan <115078151+mmaazkhanhere@users.noreply.github.com>"]
readme = "README.md"

packages = [
    { include = "main.py" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
streamlit = "^1.40.2"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
wheel = "^0.45.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
